Chore: Replace `Collections.emptyMap` with `Map.of` for better readability and consistency